@@ -5,6 +5,7 @@ Added
     CRUD operations for image aliases (#170)
     Update image "public" & "auto update" properties (#170)
     Display some of the system details provided in LXD >= 4.1 (#206)
+    Export instance as image
 
 Changed
     Inject userId if requested by controller so the $userId variable in a
